fix: Mobile overflow (#91)

--- a/src/components/Pages/SetupPage/SetupPage.module.css
+++ b/src/components/Pages/SetupPage/SetupPage.module.css
@@ -192,6 +192,11 @@
 }
 
 @media screen and (max-width: 768px) {
+  .container {
+    overflow: unset;
+    height: unset;
+  }
+
   .mobileContainer {
     padding: 24px;
     color: white;
